--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iconify-json/tabler": "^1.1.114",
     "astro": "^4.11.1",
     "astro-icon": "^1.1.0",
+    "photoswipe": "^5.4.4",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
