--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/inter": "^5.0.18",
     "@iconify-json/mdi": "^1.1.67",
     "@iconify-json/tabler": "^1.1.114",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.11.1",
     "astro-icon": "^1.1.0",
     "photoswipe": "^5.4.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sonner": "^1.5.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
