--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,18 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      EMAIL_ACCESS_KEY: ${{secrets.EMAIL_ACCESS_KEY}}
+      # REDUHQ: ${{secrets.REDUHQ}}
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       - name: Install, build, and upload your site
         uses: withastro/action@v2
+      # - name: Read my env variable EMAIL_ACCESS_KEY
+      #   run: echo "my EMAIL_ACCESS_KEY is ${{secrets.EMAIL_ACCESS_KEY}}"
+      # - name: Read my env variable REDUHQ
+      #   run: echo "my REDUHQ is ${{secrets.REDUHQ}}"
         # with:
           # path: . # La ubicación raíz de tu proyecto de Astro dentro del repositorio. (opcional)
           # node-version: 20 # La versión específica de Node que debería usarse para construir tu sitio. Por defecto es 20. (opcional)
